# erdos-fc-sync

./: .gitignore  CONTRIBUTING.md  NEXT_BATCH.md  README.md  STATUS.md  erdos_frontier.py  fc-sync-status.py  fc_sync_status.py  frontier.json  frontier.yaml  index.html  match_packet.py  overrides.yaml  pyproject.toml  staging_cleared.yaml  status.json  verdicts.json  wiki_snapshot.py
.github/workflows/: audit-jayyhk-matrix.yml  audit-proofs.yml  pages.yml  update-status.yml  vela-frontier.yml
lean_assumptions/: README.md  assumptions.jsonl  assumptions_alphaproof.jsonl  audit_feed.json  extract_all.lean  extract_alphaproof.lean  extract_assumptions.py
proof/: events.manifest.jsonl  freshness.md  hashes.json  latest.json  replay.trace.jsonl
scripts/: ci-red-test.sh  sign-batch.sh  sign-fidelity.sh
site/: STATUS.md  index.html
statements/: _WILL_ACTIONS.md
tests/: golden_machine_verdicts.json  test_fc_sync_status.py  test_regression.py
