[project]
name = "erdos-frontier"
version = "0.1.0"
description = "A formal-proof fidelity audit over the Erdős frontier: which 'solved' problems rest on an unconditional Lean proof, and which silently assume an unproven result."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
